# se-toolkit-hackathon

./: .dockerignore  .env.bot.example  .env.example  .gitignore  .markdownlint.jsonc  Dockerfile  Question bank.md  README.md  compose.yaml  pyproject.toml  render.yaml
backend/: Dockerfile  pyproject.toml
backend/src/cava_backend/: __init__.py  auth.py  database.py  main.py  run.py  settings.py
backend/src/cava_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/cava_backend/db/: __init__.py  menu_items.py  users.py
backend/src/cava_backend/models/: __init__.py  menu_item.py  user.py
backend/src/cava_backend/routers/: auth.py  menu.py
backend/src/cava_backend/services/: menu_image_renderer.py  menu_localization.py  menu_render_cache.py  posters.py  seeder.py  user_seeder.py
backend/tests/e2e/: __init__.py  conftest.py  test_menu.py
backend/tests/unit/: conftest.py  test_menu.py
bot/: Dockerfile  bot.py  config.py  pyproject.toml
bot/handlers/: commands.py
bot/handlers/shared/: messages.py
bot/services/: api_client.py  language_store.py
docker/: start-all.sh
docs/: demo-script.md  lab-9-requirements.md  presentation-outline.md  presentation-ready-text.md  project-plan.md  render-deploy.md  submission-checklist.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
