[project]
name = "cava-backend"
version = "0.1.0"
description = "Backend API for the Cava Menu Bot"
requires-python = ">=3.9"
dependencies = [
  "aiosqlite>=0.20.0",
  "fastapi>=0.115.0,<1.0.0",
  "greenlet>=3.1.1",
  "pillow>=11.0.0",
  "pydantic-settings>=2.4.0",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.30.6",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["cava_backend*"]
